--- a/index.html
+++ b/index.html
@@ -9,32 +9,16 @@
 </head>
 
 <body>
-    <div class = "wrapper">
-        <div class = "left">
-            <img class = "profile-pic" src= "img/IMG-7824.jpg"  />
-            <h1>
-                Nguyen Le 
-            </h1>
-            <h4>
-                Computer Engineering Student
-            </h4>
-        </div>
-
-        <div class ="right">
-            <p>
-                Hi! My name is Nguyen and I am pursuing a Bachelor of Science in Computer Engineering and a minor in Computer Science at Northeastern University. 
-                Some of my interests include gaming, traveling, dancing, and cooking. Thanks for visiting my website!
-
-            <div class = "links">
-                <ul>
-                <li> <a href= "https://www.linkedin.com/in/nguyen-q-le/" target = "_ blank">LinkedIn </a> </li>
-                <li> <a href= "https://github.com/Nle1254" target = "_ blank"> Github</a> </li>
-                </ul>
-            </div>
-            </p>
-        </div>
-
-       
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html"> Home </a></li>
+                <li><a href = "about.html">About Me </a></li>
+                <li><a href = "port.html">Portfolio </a></li>
+                <li><a href = "contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    <h1>Home</h1>
+    </header>
 </body>
 </html>
